# g2oProject

./: README.md
g2o_project/g2o_new_project/ExampleOne/: CMakeLists.txt  CurveFittingEdge.cpp  CurveFittingVetex.cpp  commonBased.h  main.cpp
g2o_project/g2o_new_project/ExampleTwo/: CMakeLists.txt  OptimizeSphere.cpp  OptimizeSphere.h  config.yaml  createSphere.cpp  createSphere.h
g2o_project/g2o_old_project/ExampleOne/: CMakeLists.txt  CurveFittingEdge.h  CurveFittingVetex.h  main.cpp
g2o_project/g2o_old_project/ExampleTwo/: CMakeLists.txt  OptimizeSphere.cpp  commonBased.h  config.cpp  config.h  createSphere.cpp  main.cpp
g2o_project/g2o_old_project/ExampleTwo/cmake_modules/: FindQGLViewer.cmake
